tests/failed/02-attr-not-specified.rs
use endiannezz::Io;

#[derive(Io)]
struct Foo;

fn main() {}
